<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    android:background="@color/bg_color"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/btn_filter_close"
            android:layout_width="@dimen/btn_corner_size"
            android:layout_height="@dimen/btn_corner_size"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:background="@drawable/btn_small_white"
            android:elevation="@dimen/app_elevation"
            android:src="@drawable/ic_cross"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_filters"
            style="@style/text_title_black"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_title"
            app:layout_constraintStart_toEndOf="@+id/btn_filter_close"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/titleProjects"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:layout_marginStart="216dp"
            android:text="@string/project_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_filter_close" />

        <CheckBox
            android:id="@+id/checkOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_status_open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleProjects" />

        <CheckBox
            android:id="@+id/checkClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_status_closed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkOpen" />

        <CheckBox
            android:id="@+id/checkActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_status_active"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkClose" />

        <TextView
            android:id="@+id/titleType"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_projects_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkActive" />

        <CheckBox
            android:id="@+id/checkResearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_type_research"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleType" />

        <CheckBox
            android:id="@+id/checkHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_type_hard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkResearch" />

        <CheckBox
            android:id="@+id/checkService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/filter_projects_type_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkHard" />

        <TextView
            android:id="@+id/titleLeader"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_leader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkService" />

        <Spinner
            android:id="@+id/spinner_supervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:prompt="@string/supervisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLeader" />

        <TextView
            android:id="@+id/titleTag"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_supervisor" />

        <Spinner
            android:id="@+id/spinner_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/tags"
            android:layout_margin="@dimen/app_margin_xlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTag" />

        <Button
            android:id="@+id/btn_add_tag"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="Добавить"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner_tag"
            app:layout_constraintTop_toTopOf="@+id/spinner_tag" />

        <HorizontalScrollView
            android:id="@+id/rcv_hor_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_large"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_tag">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_tags"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="none"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/tag_list_item"
                android:layout_height="wrap_content"/>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/titleTime"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_hor_tags" />

        <EditText
            android:id="@+id/editTextDateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTime" />

        <TextView
            android:id="@+id/tv_time_start"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextDateStart"
            app:layout_constraintStart_toEndOf="@+id/editTextDateStart"
            app:layout_constraintTop_toTopOf="@+id/editTextDateStart"
            app:layout_constraintVertical_bias="0.518"
            tools:text="@string/filter_time_start" />

        <EditText
            android:id="@+id/editTextDateEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateStart" />

        <TextView
            android:id="@+id/tv_time_end"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextDateEnd"
            app:layout_constraintStart_toEndOf="@+id/editTextDateEnd"
            app:layout_constraintTop_toTopOf="@+id/editTextDateEnd"
            app:layout_constraintVertical_bias="0.518"
            tools:text="@string/filter_time_end" />

        <TextView
            android:id="@+id/titleDifficulty"
            style="@style/text_medium_blue"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_difficulty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateEnd" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:max="100"
            android:progress="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDifficulty" />


        <Button
            android:id="@+id/btn_filter_apply"
            style="@style/btn_big_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_xlarge"
            android:text="@string/filter_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>