<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        style="@style/text_title_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/message_text"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_blue_background"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_red_background"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>