<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.my_projects.MyProjectsFragment"
    >

    <ImageButton
        android:id="@+id/btn_my_projects_close"
        android:layout_width="@dimen/btn_corner_size"
        android:layout_height="@dimen/btn_corner_size"
        android:layout_margin="@dimen/app_margin_large"
        android:background="@drawable/btn_small_white"
        android:elevation="@dimen/app_elevation"

        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_project_information_account"
        android:layout_width="@dimen/btn_corner_size"
        android:layout_height="@dimen/btn_corner_size"
        android:layout_margin="@dimen/app_margin_large"
        android:background="@drawable/btn_small_white"
        android:elevation="@dimen/app_elevation"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reqTitle"
        style="@style/text_title_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin_large"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/req_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_projects_close" />

    <TextView
        android:id="@+id/roleTitle"
        style="@style/text_medium_blue"
        android:layout_margin="@dimen/app_margin_large"
        android:text="@string/req_role_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqTitle" />

    <EditText
        android:id="@+id/editTextRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_input_without_border"
        android:drawableLeft="@drawable/ic_resource_case"
        android:drawablePadding="12dp"
        android:elevation="@dimen/app_elevation"
        android:ems="10"

        android:hint="@string/req_role_field"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_project_information_account"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roleTitle" />

    <TextView
        android:id="@+id/skilsTitle"
        style="@style/text_medium_blue"
        android:layout_margin="@dimen/app_margin_large"
        android:text="@string/req_skils_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRole" />

    <EditText
        android:id="@+id/editTextSkils"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_input_without_border"
        android:drawableLeft="@drawable/ic_skills"

        android:drawablePadding="12dp"
        android:elevation="@dimen/app_elevation"
        android:ems="10"
        android:hint="@string/req_skils_field"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextRole"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skilsTitle" />

    <TextView
        android:id="@+id/expTitle"
        style="@style/text_medium_blue"
        android:layout_margin="@dimen/app_margin_large"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/req_exp_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSkils" />

    <EditText
        android:id="@+id/editTextExp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_input_without_border"
        android:drawableLeft="@drawable/ic_experience"

        android:drawablePadding="12dp"
        android:elevation="@dimen/app_elevation"
        android:ems="10"
        android:hint="@string/req_exp_field"
        android:inputType="textPersonName"
        android:padding="10dp"

        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSkils"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expTitle" />

    <TextView
        android:id="@+id/dataTitle"
        style="@style/text_medium_blue"
        android:layout_width="188dp"
        android:layout_height="33dp"
        android:layout_margin="@dimen/app_margin_large"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:text="@string/req_personal_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="132dp"
        android:background="@drawable/round_input_without_border"
        android:button="@drawable/ic_check"
        android:elevation="@dimen/app_elevation"

        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/dataTitle"
        app:layout_constraintEnd_toEndOf="@+id/editTextExp"
        app:layout_constraintStart_toEndOf="@+id/dataTitle"
        app:layout_constraintTop_toTopOf="@+id/dataTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/typePrjText"
        style="@style/text_title_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin_large"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/mont_regular"
        android:text="@string/req_required"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataTitle"
        app:lineHeight="30dp" />

    <Button
        android:id="@+id/motivationBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/app_margin_large"
        android:text="@string/req_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/btn_big_blue" />




</androidx.constraintlayout.widget.ConstraintLayout>